; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_syslog.c_ngx_syslog_add_header.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_syslog.c_ngx_syslog_add_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32, i64, i64 }

@.str = private unnamed_addr constant [13 x i8] c"<%ui>%V %V: \00", align 1
@ngx_cached_syslog_time = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"<%ui>%V %V %V: \00", align 1
@ngx_cycle = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ngx_syslog_add_header(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = mul nsw i32 %9, 8
  %11 = sext i32 %10 to i64
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 3
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %11, %14
  store i64 %15, i64* %6, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %2
  %21 = load i32*, i32** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = call i32* (i32*, i8*, i64, i32*, i32*, ...) @ngx_sprintf(i32* %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i64 %22, i32* @ngx_cached_syslog_time, i32* %24)
  store i32* %25, i32** %3, align 8
  br label %34

26:                                               ; preds = %2
  %27 = load i32*, i32** %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** @ngx_cycle, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = call i32* (i32*, i8*, i64, i32*, i32*, ...) @ngx_sprintf(i32* %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i64 %28, i32* @ngx_cached_syslog_time, i32* %30, i32* %32)
  store i32* %33, i32** %3, align 8
  br label %34

34:                                               ; preds = %26, %20
  %35 = load i32*, i32** %3, align 8
  ret i32* %35
}

declare dso_local i32* @ngx_sprintf(i32*, i8*, i64, i32*, i32*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
